import React from 'react';
import { render } from '@testing-library/react';
import { LoginForm as Form } from '../../constants/defaults';




describe('<LoginForm/>', () => {

    it('Render the <LoginForm/> with data', () => {

        const { container, getByText, getByPlaceholderText } = render(
            <Form>
                <Form.Title>Sign In Now</Form.Title>

                <Form.Base>
                    <Form.Input placeholder="Email address" onChange={() => { }} />
                    <Form.Input type="password" placeholder="Password" onChange={() => { }} />
                    <Form.Submit type="submit" disabled>
                        Sign In
                    </Form.Submit>
                </Form.Base>


                <Form.TextSmall>
                    This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.
                </Form.TextSmall>
            </Form>
        )

        expect(getByText("This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.")).toBeTruthy();
        expect(getByText('Sign In Now')).toBeTruthy();
        expect(getByText('Sign In')).toBeTruthy();
        expect(getByText('Sign In').disabled).toBeTruthy();
        expect(getByPlaceholderText('Email address')).toBeTruthy();
        expect(getByPlaceholderText('Password')).toBeTruthy();
        expect(container.firstChild).toMatchSnapshot();
    })


    it('renders the <Form /> with an error', () => {
        const { container, getByText, queryByText } = render(
            <Form>
                <Form.Error>Your email address is already being used</Form.Error>
                <Form.Submit type="submit">Sign In</Form.Submit>
            </Form>
        );
       
        expect(getByText('Your email address is already being used')).toBeTruthy();
        expect(queryByText('Sign In').disabled).toBeFalsy();
        expect(container.firstChild).toMatchSnapshot();
    });

})



